Fixed captcha small print alignment

--- a/src/intake-form/components/IntakeForm.css
+++ b/src/intake-form/components/IntakeForm.css
@@ -17,7 +17,7 @@
   padding: 1em;
   display: flex;
   justify-content: space-between;
-  vertical-align: middle;
+  align-items: center;
 }
 
 .form {
